--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="create_account">Create Account</string>
     <string name="email_pattern">^[_A-Za-z0-9-]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
     <string name="password_pattern"><![CDATA[^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$]]></string>
+    <string name="home">Home</string>
+    <string name="statistics">Statistics</string>
+    <string name="transfer">Transfer</string>
+    <string name="stocks">Stocks</string>
+    <string name="cards">Cards</string>
     <string-array name="countries_array">
         <item>Afghanistan</item>
         <item>Albania</item>
