--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="transfer">Transfer</string>
     <string name="stocks">Stocks</string>
     <string name="cards">Cards</string>
+    <string name="processed">Processed</string>
     <string-array name="countries_array">
         <item>Afghanistan</item>
         <item>Albania</item>
