--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="code_sent">Enter the verification code sent to: \n%1$s</string>
+    <string name="enter_the_last_5_characters_of_your_npersonal_id_number_cnp">Enter the last 5 characters of your \nPersonal ID Number (CNP)</string>
+    <string name="personal_id_verification">Personal ID Verification</string>
 </resources>
